--- a/messages/pt_BR/LC_MESSAGES/3166-2.po
+++ b/messages/pt_BR/LC_MESSAGES/3166-2.po
@@ -10,16 +10,16 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
-"PO-Revision-Date: 2020-01-06 12:21+0000\n"
+"PO-Revision-Date: 2020-12-23 17:30+0000\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/iso-"
-"codes/iso-3166-2/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
+"iso-codes/iso-3166-2/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 3.10\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -2915,7 +2915,7 @@ msgstr ""
 
 #. Name for CO-BOL, Name for EC-B, Name for VE-F
 msgid "Bolívar"
-msgstr ""
+msgstr "Bolívar"
 
 #. Name for CO-BOY
 msgid "Boyacá"
@@ -3011,7 +3011,7 @@ msgstr ""
 
 #. Name for CO-SUC, Name for VE-R
 msgid "Sucre"
-msgstr ""
+msgstr "Sucre"
 
 #. Name for CO-TOL
 msgid "Tolima"
@@ -6975,7 +6975,7 @@ msgstr ""
 
 #. Name for HN-LE
 msgid "Lempira"
-msgstr ""
+msgstr "Lempira"
 
 #. Name for HN-OC
 msgid "Ocotepeque"
@@ -7695,7 +7695,7 @@ msgstr ""
 
 #. Name for IN-SK
 msgid "Sikkim"
-msgstr ""
+msgstr "Siquim"
 
 #. Name for IN-TG
 msgid "Telangana"
@@ -18003,7 +18003,7 @@ msgstr ""
 
 #. Name for UM-71
 msgid "Midway Islands"
-msgstr ""
+msgstr "Ilhas Midway"
 
 #. Name for UM-76
 msgid "Navassa Island"
@@ -18011,7 +18011,7 @@ msgstr ""
 
 #. Name for UM-79
 msgid "Wake Island"
-msgstr ""
+msgstr "Ilha Wake"
 
 #. Name for UM-81
 msgid "Baker Island"
