--- a/messages/pt_BR/LC_MESSAGES/3166-3.po
+++ b/messages/pt_BR/LC_MESSAGES/3166-3.po
@@ -12,6 +12,7 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2002.
 # Leonardo Ferreira Fontenelle <leonardof@gnome.org>, 2006-2009.
 # Rafael Ferreira <rafael.f.f1@gmail.com>, 2013.
+# Rafael Fontenelle <rafaelff@gnome.org>, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-3\n"
