--- a/messages/pt_BR/LC_MESSAGES/4217.po
+++ b/messages/pt_BR/LC_MESSAGES/4217.po
@@ -7,7 +7,7 @@
 # E. A. Tacão <tacao@conectiva.com.br>, 2000.
 # Juan Carlos Castro y Castro <jcastro@vialink.com.br>, 2001.
 # Alastair McKinstry <mckinstry@debian.org>, 2002.
-# Rafael Fontenelle <rafaelff@gnome.org>, 2018.
+# Rafael Fontenelle <rafaelff@gnome.org>, 2018, 2020.
 # Rui Mendes <xz9@protonmail.com>, 2019.
 msgid ""
 msgstr ""
