--- a/messages/pt_BR/LC_MESSAGES/639-2.po
+++ b/messages/pt_BR/LC_MESSAGES/639-2.po
@@ -8,23 +8,23 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2001.
 # Juan Carlos Castro y Castro <jcastro@vialink.com.br>, 2000, 2005.
 # Leonardo Ferreira Fontenelle <leonardof@gnome.org>, 2007-2009.
-# Rafael Fontenelle <rafaelff@gnome.org>, 2017.
+# Rafael Fontenelle <rafaelff@gnome.org>, 2017, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2018-04-08 21:22+0000\n"
+"PO-Revision-Date: 2020-12-23 17:30+0000\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/iso-"
-"codes/iso-639-2/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
+"iso-codes/iso-639-2/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 2.20\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -100,7 +100,7 @@ msgstr "Angika"
 
 #. Name for apa
 msgid "Apache languages"
-msgstr "Idiomas Apache"
+msgstr "Idiomas apache"
 
 #. Name for ara
 msgid "Arabic"
@@ -144,7 +144,7 @@ msgstr "Idiomas atabascanos"
 
 #. Name for aus
 msgid "Australian languages"
-msgstr "Idiomas Australianos"
+msgstr "Idiomas australianos"
 
 #. Name for ava
 msgid "Avaric"
@@ -168,11 +168,11 @@ msgstr "Azerbaidjano"
 
 #. Name for bad
 msgid "Banda languages"
-msgstr "Idiomas Maias"
+msgstr "Idiomas maias"
 
 #. Name for bai
 msgid "Bamileke languages"
-msgstr "Línguas bamileke"
+msgstr "Idiomas bamileke"
 
 #. Name for bak
 msgid "Bashkir"
@@ -220,7 +220,7 @@ msgstr "Bangla"
 
 #. Name for ber
 msgid "Berber languages"
-msgstr "Línguas berberes"
+msgstr "Idiomas berberes"
 
 #. Name for bho
 msgid "Bhojpuri"
@@ -228,7 +228,7 @@ msgstr "Bhojpuri"
 
 #. Name for bih
 msgid "Bihari languages"
-msgstr "Línguas biaris"
+msgstr "Idiomas biaris"
 
 #. Name for bik
 msgid "Bikol"
@@ -313,7 +313,7 @@ msgstr "Cebuano"
 
 #. Name for cel
 msgid "Celtic languages"
-msgstr "Idiomas célticos"
+msgstr "Idiomas celtas"
 
 #. Name for ces
 msgid "Czech"
@@ -377,7 +377,7 @@ msgstr "Cheyenne"
 
 #. Name for cmc
 msgid "Chamic languages"
-msgstr "Línguas chamic"
+msgstr "Idiomas châmicos"
 
 #. Name for cop
 msgid "Coptic"
@@ -401,7 +401,7 @@ msgstr "Crioulos e pidgins baseados no francês"
 
 #. Name for cpp
 msgid "Creoles and pidgins, Portuguese-based"
-msgstr "Crioulos e pidgins baseados no potuguês"
+msgstr "Crioulos e pidgins, baseados no português"
 
 #. Name for cre
 msgid "Cree"
@@ -917,7 +917,7 @@ msgstr "Khasi"
 
 #. Name for khi
 msgid "Khoisan languages"
-msgstr "Idiomas Khoisan"
+msgstr "Idiomas coissãos"
 
 # Existe "khmer" no Houaiss :o
 #. Name for khm
@@ -978,7 +978,7 @@ msgstr "Careliano"
 
 #. Name for kro
 msgid "Kru languages"
-msgstr "Línguas kru"
+msgstr "Idiomas kru"
 
 #. Name for kru
 msgid "Kurukh"
@@ -1204,7 +1204,7 @@ msgstr "Idiomas múltiplos"
 
 #. Name for mun
 msgid "Munda languages"
-msgstr "Idiomas Munda"
+msgstr "Idiomas munda"
 
 #. Name for mus
 msgid "Creek"
@@ -1224,7 +1224,7 @@ msgstr "Birmanês"
 
 #. Name for myn
 msgid "Mayan languages"
-msgstr "Idiomas Maias"
+msgstr "Idiomas maias"
 
 #. Name for myv
 msgid "Erzya"
@@ -1323,7 +1323,7 @@ msgstr "Sepedi; Sotho do Norte"
 
 #. Name for nub
 msgid "Nubian languages"
-msgstr "Idiomas Núbios"
+msgstr "Idiomas núbios"
 
 #. Name for nwc
 msgid "Classical Newari; Old Newari; Classical Nepal Bhasa"
@@ -1572,7 +1572,7 @@ msgstr "Cingalês"
 
 #. Name for sio
 msgid "Siouan languages"
-msgstr "Idiomas siouan"
+msgstr "Idiomas sioux"
 
 #. Name for sit
 msgid "Sino-Tibetan languages"
@@ -1819,7 +1819,7 @@ msgstr "Tumbuka"
 
 #. Name for tup
 msgid "Tupi languages"
-msgstr "Idiomas Tupi"
+msgstr "Idiomas tupi"
 
 #. Name for tur
 msgid "Turkish"
