--- a/messages/ru/LC_MESSAGES/15924.po
+++ b/messages/ru/LC_MESSAGES/15924.po
@@ -6,23 +6,25 @@
 # Copyright ©
 # Pavel Maryanov <acid@jack.kiev.ua>, 2009-2010.
 # Yuri Kozlov <yuray@komyakino.ru>, 2010-2013, 2017.
+# Aleksey Reprintsev <a.reprintsev@gmail.com>, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2017-03-13 19:04+0300\n"
-"Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
-"Language-Team: Russian <gnu@d07.ru>\n"
+"PO-Revision-Date: 2020-12-25 15:29+0000\n"
+"Last-Translator: Aleksey Reprintsev <a.reprintsev@gmail.com>\n"
+"Language-Team: Russian <https://hosted.weblate.org/projects/iso-codes/"
+"iso-15924/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
-"X-Generator: Lokalize 2.0\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -174,7 +176,7 @@ msgstr "Египетская иероглифическая"
 
 #. Name for Elba
 msgid "Elbasan"
-msgstr "Эльбасанская"
+msgstr "Эльбасан"
 
 #. Name for Ethi
 msgid "Ethiopic (Geʻez)"
