--- a/messages/et/LC_MESSAGES/15924.po
+++ b/messages/et/LC_MESSAGES/15924.po
@@ -5,7 +5,7 @@
 # .
 # Copyright ©
 # Dr. Tobias Quathamer <toddy@debian.org>, 2007.
-# Kristjan Räts <kristjanrats@gmail.com>, 2018.
+# Kristjan Räts <kristjanrats@gmail.com>, 2018, 2021.
 # Janar Leas <janar.leas@gmail.com>, 2020.
 msgid ""
 msgstr ""
@@ -13,8 +13,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-12-05 15:29+0000\n"
-"Last-Translator: Janar Leas <janar.leas@gmail.com>\n"
+"PO-Revision-Date: 2021-01-18 09:32+0000\n"
+"Last-Translator: Kristjan Räts <kristjanrats@gmail.com>\n"
 "Language-Team: Estonian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/et/>\n"
 "Language: et\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -353,7 +353,6 @@ msgid "Latin"
 msgstr "ladina"
 
 #. Name for Leke
-#, fuzzy
 msgid "Leke"
 msgstr "leke"
 
@@ -402,7 +401,6 @@ msgid "Manichaean"
 msgstr "mani"
 
 #. Name for Marc
-#, fuzzy
 msgid "Marchen"
 msgstr "suurem mar"
 
@@ -507,7 +505,6 @@ msgid "Palmyrene"
 msgstr "Palmyra"
 
 #. Name for Pauc
-#, fuzzy
 msgid "Pau Cin Hau"
 msgstr "Pau Cin Hau"
 
